<resources>
    <string name="app_name">WordEgo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_ego">Word Ego</string>
    <string name="all_rights">All Rights Are Reserved</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="todo">TODO</string>
    <string name="best_score">Best Score :</string>
    <string name="guess_the_word">Guess the Word ?</string>
    <string name="enter_the_word">Enter the Word</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try Again</string>
    <string name="empty">Please enter the word</string>
    <string name="score">Score:0</string>
    <string name="word_count">%d of %d words</string>
    <string name="remaining_guesses_20">Remaining Guesses : </string>
    <string name="total_score">Total Score :-</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">play again</string>
</resources>